# cleave

./: Cargo.toml  flake.nix  license.md  readme.md
cleave-graphics/: Cargo.toml
cleave-graphics/src/: error.rs  graphics_bundle.rs  graphics_impl.rs  lib.rs  texture.rs  vertex.rs
shaders/: gui.wgsl
src/: context.rs  graphics_bundle.rs  graphics_impl.rs  instance.rs  main.rs  texture.rs  vertex.rs
